test_cases/pass/p46.lxr
SCRIPT AREA
START SCRIPT
DECLARE STRING msg = "Hello, Lexor!"
PRINT: msg
END SCRIPT