test_cases/fail/f53.lxr
SCRIPT AREA
START SCRIPT
DECLARE STRING s
s=42
END SCRIPT